# D-Rats

./: .codespellrc  .gitignore  3app.py  LICENSE  MANIFEST.in  NEWS.rst  PKG-INFO  README.md  build_pot.sh  changelog  copy.bat  d-rats.py  d-rats_in_mobaxerm_install.sh  d-rats_in_mobaxterm_install.sh  d-rats_repeater.py  d-rats_safe_mode.bat  distXP.bat  howto.txt  install.txt  install_default_forms.bat  internationalization_test.py  msys2_packages.sh  plugin_test.py  pylintrc  pyproject.toml  python_prebuild.py  requirements.txt  setup.cfg  setup.py  setup.py.old  todo.txt  version.py
changes/: 100.bugfix  107.bugfix  109.bugfix  110.misc  112.misc  113.feature  114.bugfix  115.bugfix  117.feature  119.bugfix  124.bugfix  125.misc  129.bugfix  135.bugfix  146.bugfix  152.bugfix  167.bugfix  176.bugfix  187.bugfix  191.bugfix  199.bugfix  200.bugfix  201.bugfix  204.bugfix  204.feature  209.bugfix  211.bugfix  215.bugfix  218.bugfix  224.bugfix  226.bugfix  228.bugfix  230.bugfix  236.bugfix  237.bugfix  243.bugfix  245.bugfix  245.feature  246.bugfix  249.bugfix  (+8 more)
d_rats/: __init__.py  agw.py  aprs_dprs.py  aprs_icons.py  ax25.py  callsigns.py  cap.py  comm.py  config.py  config_defaults.py  config_tips.py  crc_checksum.py  ddt2.py  debug.py  dplatform.py  dplatform_generic.py  dplatform_macos.py  dplatform_unix.py  dplatform_win32.py  dratsconfig.py  dratsexception.py  emailgw.py  filenamebox.py  formbuilder.py  formgui.py  geocode_ui.py  gps.py  image.py  inputdialog.py  keyedlistwidget.py  latlonentry.py  listwidget.py  lzhuf.py  mailsrv.py  mainapp.py  mainwindow.py  (+27 more)
(+144 files in other folders)
